[WIN] Fix tests for text with initial advances https://bugs.webkit.org/show_bug.cgi?id=188099

Reviewed by Darin Adler.

Fixup after r234318.

Tests: fast/text/complex-first-glyph-with-initial-advance.html
       fast/text/initial-advance-in-intermediate-run-complex.html

* platform/graphics/ComplexTextController.cpp:
* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::drawGlyphBuffer const):

Canonical link: https://commits.webkit.org/203325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234448 268f45cc-cd09-0410-ab3c-d52691b4dbfc