Tools/TestWebKitAPI/Tests/WebCore/ComplexTextController.cpp
@@ -25,6 +25,8 @@
 
 #include "config.h"
 
+#if !PLATFORM(WIN)
+
 #include <JavaScriptCore/InitializeThreading.h>
 #include <WebCore/ComplexTextController.h>
 #include <WebCore/FontCascade.h>
@@ -365,3 +367,5 @@ TEST_F(ComplexTextControllerTest, TotalWidthWithJustification)
 }
 
 }
+
+#endif
